--- a/sprint-app-ui/src/styles.css
+++ b/sprint-app-ui/src/styles.css
@@ -1,3 +1,5 @@
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeflex/primeflex.css";
+@import "primeicons/primeicons.css";
+@import "quill/dist/quill.snow.css";
