--- a/sprint-app-ui/src/app/dashboard/dashboard-home/dashboard-home.component.html
+++ b/sprint-app-ui/src/app/dashboard/dashboard-home/dashboard-home.component.html
@@ -2,7 +2,7 @@
   <p-chip
     (click)="getSprintDetails(sprint)"
     [label]="sprint.name"
-    class="sprint-chip"
+    class="text-2xl"
   ></p-chip>
 </ng-container>
 
