--- a/sprint-app-ui/src/app/dashboard/sprint/sprint.component.html
+++ b/sprint-app-ui/src/app/dashboard/sprint/sprint.component.html
@@ -1,11 +1,14 @@
-<p-splitter styleClass="m-5">
+<p-splitter styleClass="m-5" *ngIf="_sprint; else noSprint">
   <ng-template pTemplate>
     <div class="col flex flex-column align-items-center justify-content-center">
       <h3>To do</h3>
+      <p-divider></p-divider>
+
       <p-card
         *ngFor="let task of todoTasks"
         [header]="task.title"
         [subheader]="'Created ' + task.createdAt.toLocaleString()"
+        class="w-10 min-w-max"
       >
         <p-button icon="pi pi-trash" class="text-xs"></p-button>
         <p-button
@@ -20,25 +23,54 @@
   <ng-template pTemplate>
     <div class="col flex flex-column align-items-center justify-content-center">
       <h3>In Progress</h3>
-      <div *ngFor="let task of inProgressTasks">
-        {{ task | json }}
-      </div>
+      <p-divider></p-divider>
+
+      <p-card
+        *ngFor="let task of inProgressTasks"
+        [header]="task.title"
+        [subheader]="'Created ' + task.createdAt.toLocaleString()"
+        class="w-10 min-w-max"
+      >
+        <p-button icon="pi pi-trash" class="text-xs"></p-button>
+        <p-button
+          icon="pi pi-ellipsis-h"
+          styleClass="p-button-secondary"
+          class="ml-1 text-xs"
+          (click)="openTaskDetailsDialog(task)"
+        ></p-button>
+      </p-card>
     </div>
   </ng-template>
   <ng-template pTemplate>
     <div class="col flex flex-column align-items-center justify-content-center">
       <h3>In Review</h3>
-      <div *ngFor="let task of inReviewTasks">
-        {{ task | json }}
-      </div>
+      <p-divider></p-divider>
+
+      <p-card
+        *ngFor="let task of inReviewTasks"
+        [header]="task.title"
+        [subheader]="'Created ' + task.createdAt.toLocaleString()"
+        class="w-10 min-w-max"
+      >
+        <p-button icon="pi pi-trash" class="text-xs"></p-button>
+        <p-button
+          icon="pi pi-ellipsis-h"
+          styleClass="p-button-secondary"
+          class="ml-1 text-xs"
+          (click)="openTaskDetailsDialog(task)"
+        ></p-button>
+      </p-card>
     </div>
   </ng-template>
   <ng-template pTemplate>
     <div class="col flex flex-column align-items-center justify-content-center">
       <h3>Finished</h3>
+      <p-divider></p-divider>
+
       <div *ngFor="let task of finishedTasks">
         {{ task | json }}
       </div>
     </div>
   </ng-template>
 </p-splitter>
+<ng-template #noSprint><h2>Select a sprint to start!</h2> </ng-template>
